refactor & code fixes

--- a/client/src/css/nav.scss
+++ b/client/src/css/nav.scss
@@ -2,32 +2,19 @@
   flex: auto;
 }
 
-.search-results {
-  text-align: start;
-  position: absolute;
-  top: 40px;
-  background-color: white;
-  width: 100%;
-  z-index: 10;
-}
-
 .hover:hover {
   background-color: rgba(166, 230, 245, 0.6);
 }
 
-.nav-buttons {
-  margin-top: 10px;
-}
-
 .nav-input {
-  width: 40%;
-  right: 4%;
+  margin-right: 50px;
+  width: 52%;
 }
 
 .navbar-custom {
   // background-color: rgb(172, 227, 236);
   background-color: white;
-  height: 75px;
+  // height: 75px;
 }
 
 .navbar-brand-small {
@@ -39,6 +26,10 @@
 }
 
 @media (max-width: 991px) {
+  .nav-search {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
   .nav-input {
     width: 100%;
     margin: 0%;
