--- a/client/src/css/feed.scss
+++ b/client/src/css/feed.scss
@@ -7,3 +7,21 @@
 .tag:hover {
   background-color: rgb(221, 221, 221);
 }
+
+.tag-section {
+  display: block;
+}
+
+.feed-panel {
+  width: 70%;
+}
+
+@media (max-width: 767px) {
+  .tag-section {
+    display: none;
+  }
+
+  .feed-panel {
+    width: 100%;
+  }
+}
