--- a/client/src/css/blog.scss
+++ b/client/src/css/blog.scss
@@ -5,7 +5,7 @@
 .blog-card {
   width: 70%;
 }
-.author-card {
+.author-info-card {
   width: 28%;
 }
 
@@ -13,7 +13,7 @@
   .blog-card {
     width: 100%;
   }
-  .author-card {
+  .author-info-card {
     margin: 10px;
     width: 100%;
     height: 200px;
